src/main/gen/com/tiepy/nimatron/parser/NimParser.java
// This is a generated file. Not intended for manual editing.
package com.tiepy.nimatron.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.tiepy.nimatron.parser.NimTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class NimParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return module(b, l + 1);
  }

  /* ********************************************************** */
  // '[' <<optInd ((exprColonEqExpr ','?)*)>> <<optInd (']')>>
  public static boolean arrayConstr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayConstr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_CONSTR, "<array constr>");
    r = consumeToken(b, "[");
    r = r && optInd(b, l + 1, arrayConstr_1_0_parser_);
    r = r && optInd(b, l + 1, arrayConstr_2_0_parser_);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (exprColonEqExpr ','?)*
  private static boolean arrayConstr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayConstr_1_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arrayConstr_1_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arrayConstr_1_0", c)) break;
    }
    return true;
  }

  // exprColonEqExpr ','?
  private static boolean arrayConstr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayConstr_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = exprColonEqExpr(b, l + 1);
    r = r && arrayConstr_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ','?
  private static boolean arrayConstr_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayConstr_1_0_0_1")) return false;
    consumeToken(b, ",");
    return true;
  }

  // (']')
  private static boolean arrayConstr_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arrayConstr_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'asm' pragma? (STR_LIT|RSTR_LIT|TRIPLESTR_LIT)
  public static boolean asmStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASM_STMT, "<asm stmt>");
    r = consumeToken(b, "asm");
    r = r && asmStmt_1(b, l + 1);
    r = r && asmStmt_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // pragma?
  private static boolean asmStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmStmt_1")) return false;
    pragma(b, l + 1);
    return true;
  }

  // STR_LIT|RSTR_LIT|TRIPLESTR_LIT
  private static boolean asmStmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "asmStmt_2")) return false;
    boolean r;
    r = consumeToken(b, STR_LIT);
    if (!r) r = consumeToken(b, RSTR_LIT);
    if (!r) r = consumeToken(b, TRIPLESTR_LIT);
    return r;
  }

  /* ********************************************************** */
  // 'bind' <<optInd (qualifiedIdent (',' qualifiedIdent)*)>>
  public static boolean bindStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BIND_STMT, "<bind stmt>");
    r = consumeToken(b, "bind");
    r = r && optInd(b, l + 1, bindStmt_1_0_parser_);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // qualifiedIdent (',' qualifiedIdent)*
  private static boolean bindStmt_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindStmt_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = qualifiedIdent(b, l + 1);
    r = r && bindStmt_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' qualifiedIdent)*
  private static boolean bindStmt_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindStmt_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!bindStmt_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "bindStmt_1_0_1", c)) break;
    }
    return true;
  }

  // ',' qualifiedIdent
  private static boolean bindStmt_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bindStmt_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && qualifiedIdent(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'block' symbol? ':' stmt
  public static boolean blockExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_EXPR, "<block expr>");
    r = consumeToken(b, "block");
    r = r && blockExpr_1(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && stmt(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // symbol?
  private static boolean blockExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockExpr_1")) return false;
    symbol(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'block' symbol? ':' stmt
  public static boolean blockStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLOCK_STMT, "<block stmt>");
    r = consumeToken(b, "block");
    r = r && blockStmt_1(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && stmt(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // symbol?
  private static boolean blockStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "blockStmt_1")) return false;
    symbol(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'break' <<optInd expr>>?
  public static boolean breakStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "breakStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BREAK_STMT, "<break stmt>");
    r = consumeToken(b, "break");
    r = r && breakStmt_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // <<optInd expr>>?
  private static boolean breakStmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "breakStmt_1")) return false;
    optInd(b, l + 1, expr_parser_);
    return true;
  }

  /* ********************************************************** */
  // 'case' expr ':'?
  //               ((INDENT ofBranches DEDENT)
  //               | (IND_EQ ofBranches))
  public static boolean caseStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CASE_STMT, "<case stmt>");
    r = consumeToken(b, "case");
    r = r && expr(b, l + 1);
    r = r && caseStmt_2(b, l + 1);
    r = r && caseStmt_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ':'?
  private static boolean caseStmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseStmt_2")) return false;
    consumeToken(b, ":");
    return true;
  }

  // (INDENT ofBranches DEDENT)
  //               | (IND_EQ ofBranches)
  private static boolean caseStmt_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseStmt_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = caseStmt_3_0(b, l + 1);
    if (!r) r = caseStmt_3_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // INDENT ofBranches DEDENT
  private static boolean caseStmt_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseStmt_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, INDENT);
    r = r && ofBranches(b, l + 1);
    r = r && consumeToken(b, DEDENT);
    exit_section_(b, m, null, r);
    return r;
  }

  // IND_EQ ofBranches
  private static boolean caseStmt_3_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "caseStmt_3_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IND_EQ);
    r = r && ofBranches(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'cast' '[' <<optInd typeDesc>> <<optInd (']')>> '(' <<optInd expr>> <<optInd (')')>>
  public static boolean castExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "castExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CAST_EXPR, "<cast expr>");
    r = consumeToken(b, "cast");
    r = r && consumeToken(b, "[");
    r = r && optInd(b, l + 1, typeDesc_parser_);
    r = r && optInd(b, l + 1, castExpr_3_0_parser_);
    r = r && consumeToken(b, "(");
    r = r && optInd(b, l + 1, expr_parser_);
    r = r && optInd(b, l + 1, castExpr_6_0_parser_);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (']')
  private static boolean castExpr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "castExpr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "]");
    exit_section_(b, m, null, r);
    return r;
  }

  // (')')
  private static boolean castExpr_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "castExpr_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ")");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ':' stmt postExprBlocks?
  public static boolean colonBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colonBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLON_BODY, "<colon body>");
    r = consumeToken(b, ":");
    r = r && stmt(b, l + 1);
    r = r && colonBody_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // postExprBlocks?
  private static boolean colonBody_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colonBody_2")) return false;
    postExprBlocks(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ifStmt
  //                       | whenStmt
  //                       | whileStmt
  //                       | tryStmt
  //                       | forStmt
  //                       | blockStmt
  //                       | staticStmt
  //                       | deferStmt
  //                       | asmStmt
  //                       | 'proc' routine
  //                       | 'func' routine
  //                       | 'method' routine
  //                       | 'iterator' routine
  //                       | 'macro' routine
  //                       | 'template' routine
  //                       | 'converter' routine
  //                       | 'type' <<section typeDef>>
  //                       | 'const' <<section constant>>
  //                       | ('let'|'var'|'using') <<section variable>>
  //                       | bindStmt
  //                       | mixinStmt
  //                       | simpleStmt
  public static boolean complexOrSimpleStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPLEX_OR_SIMPLE_STMT, "<complex or simple stmt>");
    r = ifStmt(b, l + 1);
    if (!r) r = whenStmt(b, l + 1);
    if (!r) r = whileStmt(b, l + 1);
    if (!r) r = tryStmt(b, l + 1);
    if (!r) r = forStmt(b, l + 1);
    if (!r) r = blockStmt(b, l + 1);
    if (!r) r = staticStmt(b, l + 1);
    if (!r) r = deferStmt(b, l + 1);
    if (!r) r = asmStmt(b, l + 1);
    if (!r) r = complexOrSimpleStmt_9(b, l + 1);
    if (!r) r = complexOrSimpleStmt_10(b, l + 1);
    if (!r) r = complexOrSimpleStmt_11(b, l + 1);
    if (!r) r = complexOrSimpleStmt_12(b, l + 1);
    if (!r) r = complexOrSimpleStmt_13(b, l + 1);
    if (!r) r = complexOrSimpleStmt_14(b, l + 1);
    if (!r) r = complexOrSimpleStmt_15(b, l + 1);
    if (!r) r = complexOrSimpleStmt_16(b, l + 1);
    if (!r) r = complexOrSimpleStmt_17(b, l + 1);
    if (!r) r = complexOrSimpleStmt_18(b, l + 1);
    if (!r) r = bindStmt(b, l + 1);
    if (!r) r = mixinStmt(b, l + 1);
    if (!r) r = simpleStmt(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // 'proc' routine
  private static boolean complexOrSimpleStmt_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_9")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "proc");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'func' routine
  private static boolean complexOrSimpleStmt_10(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_10")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "func");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'method' routine
  private static boolean complexOrSimpleStmt_11(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_11")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "method");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'iterator' routine
  private static boolean complexOrSimpleStmt_12(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_12")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "iterator");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'macro' routine
  private static boolean complexOrSimpleStmt_13(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_13")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "macro");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'template' routine
  private static boolean complexOrSimpleStmt_14(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_14")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "template");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'converter' routine
  private static boolean complexOrSimpleStmt_15(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_15")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "converter");
    r = r && routine(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'type' <<section typeDef>>
  private static boolean complexOrSimpleStmt_16(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_16")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "type");
    r = r && section(b, l + 1, typeDef_parser_);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'const' <<section constant>>
  private static boolean complexOrSimpleStmt_17(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_17")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "const");
    r = r && section(b, l + 1, constant_parser_);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('let'|'var'|'using') <<section variable>>
  private static boolean complexOrSimpleStmt_18(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_18")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = complexOrSimpleStmt_18_0(b, l + 1);
    r = r && section(b, l + 1, variable_parser_);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'let'|'var'|'using'
  private static boolean complexOrSimpleStmt_18_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "complexOrSimpleStmt_18_0")) return false;
    boolean r;
    r = consumeToken(b, "let");
    if (!r) r = consumeToken(b, "var");
    if (!r) r = consumeToken(b, "using");
    return r;
  }

  /* ********************************************************** */
  // expr ':' <<optInd expr>>
  //           ('elif' expr ':' <<optInd expr>>)*
  //            'else' ':' expr
  public static boolean condExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COND_EXPR, "<cond expr>");
    r = expr(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && optInd(b, l + 1, expr_parser_);
    r = r && condExpr_3(b, l + 1);
    r = r && consumeToken(b, "else");
    r = r && consumeToken(b, ":");
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('elif' expr ':' <<optInd expr>>)*
  private static boolean condExpr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condExpr_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!condExpr_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "condExpr_3", c)) break;
    }
    return true;
  }

  // 'elif' expr ':' <<optInd expr>>
  private static boolean condExpr_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condExpr_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "elif");
    r = r && expr(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && optInd(b, l + 1, expr_parser_);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // expr ':' <<optInd stmts>>
  //              (IND_EQ 'elif' expr ':' <<optInd stmts>>)*
  //              (IND_EQ 'else' ':' <<optInd stmts>>)?
  public static boolean condStmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condStmt")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COND_STMT, "<cond stmt>");
    r = expr(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && optInd(b, l + 1, stmts_parser_);
    r = r && condStmt_3(b, l + 1);
    r = r && condStmt_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (IND_EQ 'elif' expr ':' <<optInd stmts>>)*
  private static boolean condStmt_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "condStmt_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!condStmt_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "condStmt_3", c)) break;
    }
    return true;
  }
